--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "dependencies": {
     "antd": "^3.0.3",
+    "axios": "^0.17.1",
     "element-react": "^1.4.5",
     "element-theme-default": "^1.4.12",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-redux": "^5.0.6",
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,6 +21,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "@types/antd": "^1.0.0"
+    "@types/antd": "^1.0.0",
+    "redux-devtools": "^3.4.1"
   }
 }
