--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "mobx": "^3.4.1",
+    "mobx-react": "^4.3.5",
     "prop-types": "^15.6.0",
     "raf": "3.4.0",
     "react": "^16.2.0",
@@ -59,6 +61,8 @@
   },
   "devDependencies": {
     "@types/antd": "^1.0.0",
+    "babel-preset-react-native-stage-0": "^1.0.1",
+    "babel-preset-stage-2": "^6.24.1",
     "redux-devtools": "^3.4.1"
   },
   "jest": {
